--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8000
 DB_HOST=localhost
-DB_USER=vortex_admin
+DB_USER=root
 DB_NAME=restaurant_erp
 JWT_SECRET=mySuperSecretKey12345
 SMTP_HOST=mail.glowcity1.com
